--- a/research_notes/notes/202104018_Dynamics simulations of self-assembly of nanoparticles (Tutorial III_Visulizing model).html
+++ b/research_notes/notes/202104018_Dynamics simulations of self-assembly of nanoparticles (Tutorial III_Visulizing model).html
@@ -339,7 +339,7 @@ kbd {
 
 <p>In this tutorial, I am going to show how to visualise the model of nanoparticles we create in last tutorial.</p>
 
-<p>The fist method is using <a href="https://plato-draw.readthedocs.io/en/latest/">Plato</a>, which can directly show the model in <a href="https://jupyterlab.readthedocs.io/en/stable/">Jupyterlab</a>. The Python code to do this is</p>
+<p>The first method is using <a href="https://plato-draw.readthedocs.io/en/latest/">Plato</a>, which can directly show the model in <a href="https://jupyterlab.readthedocs.io/en/stable/">Jupyterlab</a>. The Python code to do this is</p>
 
 <div><pre><code class="language-none">import matplotlib
 import plato
