--- a/publications/publications_list.html
+++ b/publications/publications_list.html
@@ -337,9 +337,9 @@ kbd {
 
 <h2 id="toc_2"></h2>
 
-<h4 id="toc_3"><em>Most of them can be downloaded from <a href="https://www.researchgate.net/profile/Yawei_Liu3/research">Researchgate</a></em></h4>
+<h4 id="toc_3"><em>Preprint version can be downloaded in <a href="https://www.researchgate.net/profile/Yawei_Liu3/research">Researchgate</a></em></h4>
 
-<h4 id="toc_4"><em>See their citations in <a href="https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&amp;hl=en">Google Scholar</a></em></h4>
+<h4 id="toc_4"><em>See their citations in <a href="https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&amp;hl=en">Google Scholar</a> and <a href="https://publons.com/researcher/2029215/yawei-liu/">Publons</a></em></h4>
 
 <h3 id="toc_5"><strong><span style="color:#2da266">2021</span></strong></h3>
 
