Update 202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creatubg LAMMPS data file).html

--- a/research_notes/notes/202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creatubg LAMMPS data file).html
+++ b/research_notes/notes/202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creatubg LAMMPS data file).html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creating LAMMPS data file)</title>
+<title>202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creatubg LAMMPS data file)</title>
 
 
 <style type="text/css">
@@ -341,7 +341,7 @@ kbd {
 
 <p><img src="images/assembly_nanoparticles/rod_L05.png" alt="github page" height="300" /></p>
 
-<p>The initial configuration is a group of rod with their centre-of-mass arranged in a regular lattice (i.e. a set of points in space, determined by a unit cell with basis atoms, that is replicated infinitely in all dimensions). The lattice I am going to use is hexagonal in the \(x-y\) plane and is replicated in the \(z\)-direction. All rods are aligned in \(z\)-direction in the initial configuration.</p>
+<p>The initial configuration is a group of rod with their centre-of-mass arranged in a regular lattice (i.e. a set of points in space, determined by a unit cell with basis atoms, that is replicated infinitely in all dimensions). The lattice I am going to use is hexagonal in the \(y-z\) plane and is replicated in the \(x\)-direction. All rods are aligned in \(x\)-direction in the initial configuration.</p>
 
 <p>Here is Python code used to create the lattice according to the size of rod:</p>
 
