--- a/research_notes/notes/202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creating LAMMPS data file).html
+++ b/research_notes/notes/202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creating LAMMPS data file).html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creatubg LAMMPS data file)</title>
+<title>202104025_Dynamics simulations of self-assembly of nanoparticles (Tutorial IV_Creating LAMMPS data file)</title>
 
 
 <style type="text/css">
