--- a/research_notes/notes/20210502_Dynamics simulations of self-assembly of nanoparticles (Tutorial V_Creating LAMMPS script).html
+++ b/research_notes/notes/20210502_Dynamics simulations of self-assembly of nanoparticles (Tutorial V_Creating LAMMPS script).html
@@ -417,7 +417,7 @@ write_data  restart.dat.* nofix nocoeff
 
 <p>When <code>restart_flag==0</code>, LAMMPS will read the initial configuration file <code>init.dat</code> and equilibrate the system at a low pressure (thus an isotropic phase will be otbained). The final configuration will be saved as <code>restart.dat</code>.</p>
 
-<p>When <code>restart_flag==1</code>, LAMMPS will read the file <code>restart.dat</code> and compress the system from a low pressure to a high pressure, and we will observe the isotropic-nematic-smectic-crystal phase transitions as the pressure increasing.</p>
+<p>When <code>restart_flag==1</code>, LAMMPS will read the file <code>restart.dat</code> and compress the system from a low pressure to a high pressure, and we will observe the isotropic-nematic-smectic-crystal phase transitions as the pressure increases.</p>
 
 <h3 id="toc_2">References</h3>
 
